--- a/AOC2021.cpp/AOC2021.cpp.vcxproj.filters
+++ b/AOC2021.cpp/AOC2021.cpp.vcxproj.filters
@@ -21,9 +21,15 @@
     <ClCompile Include="Day1.cpp">
       <Filter>Fichiers sources</Filter>
     </ClCompile>
+    <ClCompile Include="Day2.cpp">
+      <Filter>Fichiers sources</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Day1.h">
+      <Filter>Fichiers d%27en-tête</Filter>
+    </ClInclude>
+    <ClInclude Include="Day2.h">
       <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
   </ItemGroup>
